@@ -1,12 +1,0 @@
-
-if 0:
-    print "hey python-mode, stop thinking I want 8-char indentation"
-
-"""
-utilities to be compatible with both Twisted-1.3 and 2.0
-
-"""
-
-import os
-
-from twisted.copyright import version
